Fixed the hover effect in dark mode of the dropdown list

--- a/assets/css/nav-styles.css
+++ b/assets/css/nav-styles.css
@@ -315,7 +315,7 @@ header {
 [data-theme='dark'] .dropdown-content {
   display: none;
   position: absolute;
-  background-color: var(--red);
+  background-color: var(--purple);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
